--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.tex
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.tex
@@ -115,104 +115,26 @@ Uma configuração adequada para usar ferramentas de BI
 
 		
 
-\chapter{Aula 1 - Instalando e Configurando o R e RStudio}
+\include{BP_Curso_TecComp_00_c01_2019}
 
-Nesta aula os alunos aprenderão a baixar o R e RStudio bem como aprenderão a utilizar bibliotecas em R
+\include{BP_Curso_TecComp_00_c02_2019}
 
-\section{Chegando a Instalação Existente e os Requisitos}
+\include{BP_Curso_TecComp_00_c03_2019}
 
-\section{Instalando o R e RStudio}
+\include{BP_Curso_TecComp_00_c04_2019}
 
-\section{Bibliotecas no R}
+\include{BP_Curso_TecComp_00_c05_2019}
 
-\subsection{O conceito de Biblioteca e para que serve}
+\include{BP_Curso_TecComp_00_c06_2019}
 
-\subsection{Como sei que bibliotecas eu preciso?}
+\include{BP_Curso_TecComp_00_c07_2019}
 
-\subsection{Baixando as Bibliotecas}
-
-\subsection{Resolvendo problemas de compilação}
-
-\subsection{Utilizando as bibliotecas no seu programa R}
-
-
-\chapter{Aula 2 - Acessando e Utilizando Bases de Dados}
-
-Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os principais comandos  
-
-\section{O ciclo de tratamento e análise de dados}
-
-\section{Tipos de Dados em R}
-
-\section{Dataframes}
-
-\section{Acessando Arquivos no computador}
-
-
-\section{Acessando Bases de dados via \textit{APIs}}
-
-\section{Trabalhando com bases de dados muito grandes}
-
-
-\chapter{Aula 3 - Limpando e organizando seus dados}
-
-\section{O que é uma boa base de dados e que tipos de bases existem?}
-
-\section{dplyr}
-
-\section{tidyr}
-
-\section{tidyverse}
-
-\chapter{Aula 4 - Apresentando Resultados}
-
-\section{Rmarkdown - Preparando o relatório enquanto você analisa os dados}
-
-\section{Gerando dados sintetizados - Utilizando dataframes}
-
-\section{Gerando Tabelas}
-
-\subsection{xtable}
-
-\subsection{stargazer}
-
-\chapter{Aula 5 - Gerando estatísticas dos Dados}
-
-\section{Estatísticas Descritivas}
-
-\section{Correlação}
-
-\section{Apresentando os Resultados em Gráficos}
-
-\subsection{Gráficos Simples}
-
-\subsection{Bibliotecas de Gráficos}
-
-\chapter{Aula 6 - Apresentando Resultados}
-
-\section{ggplot}
-
-\section{shiny}
-
-\chapter{Aula 7 - Utilizando modelos}
-
-\section{Regressão}
-
-\subsection{Executando a Regressão}
-
-\subsection{Apresentando os resultados da Regressão}
-
-\section{Gerando Dashboards}
-
-\chapter{Aula 8 - Encerramento do Curso}
+\include{BP_Curso_TecComp_00_c08_2019}
 
 
 \chapter{Onde aprender mais?}
 
 
-  
-  
-  
 
 %\bibliographystyle{unsrt}
 \bibliographystyle{alpha}
