--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
@@ -17,6 +17,7 @@
 
 
 \begin{document}
+\SweaveOpts{concordance=TRUE, echo=FALSE, eval=TRUE}
 
 \frontmatter
 
@@ -104,34 +105,108 @@
 
 \mainmatter
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%  Chamadas de Bibliotecas e Variaveis Globais
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Introdução }
+<<>>=
+library(knitr)
+library(stargazer)
+@
 
-Para que serve o R?
 
-Como se pode utilizar o conjunto de pacotes R para Análise de Dados e BI?
+\chapter*{Introdução}
+\addcontentsline{toc}{section}{Introdução}
 
-Uma configuração adequada para usar ferramentas de BI 
+O R é uma suíte integrada de software que permite a recuperação, o tratamento, e a análise de dados\cite{Venables2011}. Pode se dizer que o R é um ambiente de tratamento de dados que permite ao usuário, além a análise de dados propriamente dita, escrever extensões e ampliar o seu escopo.
+
+R é uma ferramenta de software livre que atende aos critérios da \textit{Free Software Foundation} e tem uma licença \textbf{GNU}\footnote{\url{https://www.gnu.org/}}
+
+Algumas das funcionalidade do R são\cite{Venables2011}:
+\begin{itemize}
+	\item Ferramentas para manuseio e armazenamento de dados
+	\item Um conjunto de operadores que permitem o cálculo numérico e a manipulação de matrizes
+	\item Um enorme conjunto de bibliotecas para análise de dados
+	\item Ferramentas para apresentação gráfica de dados e resultados
+	\item Uma linguagem de programação orientada a objetos e extensível
+	\item A possibilidade de estender a linguagem, suas bibliotecas e funções
+\end{itemize}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\linewidth]{../figs/f-Intro-01-Monetary-Policy}
+	\caption{Exemplo de \textit{Dashboard} de Política monetária usando R \cite{Showmeshiny2019}}
+	\label{fig:f-intro-01}
+\end{figure}
+
+O R tem um conjunto extenso de ferramentas que permitem desde uma análise simples de regressão ou de aglomerados (\textit{cluster}) até apresentações de resultados extraídos de bancos de dados em larga escala com ferramentas de busca \textit{SQL}\footnote{Structured Query Language - \url{https://pt.wikipedia.org/wiki/SQL}} apresentas em páginas web\ref{fig:f-intro-01}.
+
+Neste texto, iremos apresentar um conjunto de ferramentas de uso livre, a sua maioria de código aberto, que permitirão a extração, tratamento, análise e apresentação de dados, tanto para análises estatísticas mais diretas quanto para a tomada de decisões estratégicas de negócios.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Aula 1 - Instalando e Configurando o R e RStudio}
 
 Nesta aula os alunos aprenderão a baixar o R e RStudio bem como aprenderão a utilizar bibliotecas em R
 
-\section{Checando a Instalação Existente e os Requisitos}l
-
-\url{https://stackoverflow.com/questions/11103189/how-to-find-out-which-package-version-is-loaded-in-r}
-
-\url{https://www.r-bloggers.com/list-of-user-installed-r-packages-and-their-versions/}
-
-\url{https://community.rstudio.com/t/reinstalling-packages-on-new-version-of-r/7670}
 
 \section{Instalando o R e RStudio}
 
 \subsection{Instalando o R}
 
-\url{https://a-little-book-of-r-for-bioinformatics.readthedocs.io/en/latest/src/installr.html}
+Para instalar o R é preciso acessar o site \url{https://www.r-project.org/}. Os passos estão enumerados a seguir:
 
-\url{https://cran.r-project.org/doc/manuals/R-admin.html}
+Nesta página clicar em \textbf{download R} que acessa a página - \url{https://cran.r-project.org/mirrors.html} - (Figura \ref{fig:f02-01})
+
+
+
+
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f02-01}
+	\caption{Nesta página clicar em \textbf{download R}}
+	\label{fig:f02-01}
+\end{figure}
+
+Nesta página você seleciona o espelho que utilizará para baixar o R. Há sites no Brasil ou sítios em nuvem o item 0 - Cloud redirecionará automaticamente para sítios apoiados pelo Rstudio  -  \url{https://cloud.r-project.org/} (Figura \ref{fig:f02-02}) - A diferença entre os prefixos \textit{http} e \textit{https} é que os sites com \textbf{"s"} utilizam encriptação. Muitas vezes é necessário utilizar o \textit{https} em instalações cujos ambientes de TI exigem.
+
+
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f02-02}
+	\caption{Aqui você seleciona o espelho que vai usar para baixar o R}
+	\label{fig:f02-02}
+\end{figure}
+
+Você poderá baixar o R (por exemplo em \url{https://cloud.r-project.org/}) ou em algum dos outros espelhos citados anteriormente, de acordo com seu sistema operacional (Figura \ref{fig:f02-03}) Cada sistema (\textit{Linux}, \textit{MacOSX} ou \textit{Windows} tem uma rotina diferente para instalação. Aqui vamos explicar o sistema operacional mais comum (\textit{Windows}). Para outros sistemas, recomenda-se buscar instruções específicas em fóruns adequados.
+
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f02-03}
+	\caption{Sítio para baixar o R de acordo com seu sistema operacional}
+	\label{fig:f02-03}
+\end{figure}
+
+
+Finalmente, para instalar o R, você pode executar o arquivo que está no link apresentado na Figura \ref{fig:f02-04}. Você baixará um arquivo \textbf{.exe} e, ao executá-lo, o instalador do \textit{Windows} tornará o programa disponível para uso na sua máquina. 
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f02-04}
+	\caption{Página do Download do R}
+	\label{fig:f02-04}
+\end{figure}
+
+
+Você pode conseguir mais informações sobre o R e os detalhes da instalação checando nos \textit{FAQs}\footnote{Frequently Asked Questions} dos sítios que você estiver acessando \url{https://cloud.r-project.org/bin/windows/base/rw-FAQ.html}, ou em \url{https://cran.r-project.org/doc/manuals/R-admin.html}
+
 
 
 \subsection{Instalando o R Studio}
@@ -143,6 +218,17 @@ Nesta aula os alunos aprenderão a baixar o R e RStudio bem como aprenderão a u
 \url{https://www.rstudio.com/products/rstudio/download/}
 
 \url{http://rprogramming.net/download-and-install-rstudio/}
+
+
+\section{Checando a Instalação Existente e os Requisitos}
+
+
+\url{https://stackoverflow.com/questions/11103189/how-to-find-out-which-package-version-is-loaded-in-r}
+
+\url{https://www.r-bloggers.com/list-of-user-installed-r-packages-and-their-versions/}
+
+\url{https://community.rstudio.com/t/reinstalling-packages-on-new-version-of-r/7670}
+
 
 \section{Pacotes no R}
 
@@ -187,6 +273,15 @@ Nesta aula os alunos aprenderão a baixar o R e RStudio bem como aprenderão a u
 \url{https://www.dummies.com/programming/r/how-to-install-load-and-unload-packages-in-r/}
 
 
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		
 \chapter{Aula 2 - Acessando e Utilizando Bases de Dados}
 
@@ -265,6 +360,15 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 
 
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter{Aula 3 - Limpando e organizando seus dados}
 
 	\section{O que é uma boa base de dados e que tipos de bases existem?}
@@ -277,6 +381,14 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 
 
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Aula 4 - Apresentando Resultados}
 
@@ -293,6 +405,14 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 
 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \chapter{Aula 5 - Gerando estatísticas dos Dados}
 
 	\section{Estatísticas Descritivas}
@@ -306,6 +426,16 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 		\subsection{Bibliotecas de Gráficos}
 
 
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter{Aula 6 - Apresentando Resultados}
 
 	\section{ggplot}
@@ -313,6 +443,13 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 	\section{shiny}
 
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Aula 7 - Utilizando modelos}
 
@@ -326,13 +463,19 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 
 
 
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%    CAPITULO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
 \chapter{Aula 8 - Encerramento do Curso}
 
 
 
 
 \chapter{Onde aprender mais?}
+\addcontentsline{toc}{section}{Onde aprender mais?}
 
 
 
