separando os capitulos em novos arquivos (cap 8)

--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019-concordance.tex
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019-concordance.tex
@@ -1,2 +1,6 @@
-\Sconcordance{concordance:BP_Curso_TecComp_00_2019.tex:BP_Curso_TecComp_00_2019.Rnw:%
-1 18 1 1 0 92 1 1 5 388 1}
+\Sconcordance{concordance:BP_Curso_TecComp_00_2019.tex:/home/rivero/Dropbox/Workspace_Current/Projects/EmExec/Banpara/Cursos/git_curso/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw:%
+1 18 1 1 0 92 1 1 5 352 1}
+\Sconcordance{concordance:BP_Curso_TecComp_00_2019.tex:/home/rivero/Dropbox/Workspace_Current/Projects/EmExec/Banpara/Cursos/git_curso/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c08_2019.Rnw:ofs 465:%
+1 13 1}
+\Sconcordance{concordance:BP_Curso_TecComp_00_2019.tex:/home/rivero/Dropbox/Workspace_Current/Projects/EmExec/Banpara/Cursos/git_curso/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw:ofs 479:%
+470 28 1}
