--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
@@ -466,16 +466,7 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-\chapter{Aula 8 - Encerramento do Curso}
-
-
-
+\SweaveInput{BP_Curso_TecComp_00_c08_2019.Rnw}
 
 \chapter{Onde aprender mais?}
 \addcontentsline{toc}{section}{Onde aprender mais?}
