--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.tex
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.tex
@@ -206,7 +206,10 @@ Você pode conseguir mais informações sobre o R e os detalhes da instalação 
 
 
 
-\subsection{Instalando o R Studio}
+\subsection{Instalando o RStudio}
+
+O RStudio um ambiente de desenvolvimento integrado para o R. Incorpora um conjunto de funções que facilita o desenvolvimento de programas em R e a sua execução. O RStudio não é uma interface gráfica para a execução de rotinas do R, é um ambiente que permite implementar e executar programas. É um pacote comercial com partes de uso livre onde é necessário pagar pelos recursos extras.
+
 
 \url{https://www.rstudio.com/products/rstudio/}
 
@@ -460,16 +463,20 @@ Apresentar o conceito de Dataframe, os tipos de dados utilizados no R e os princ
 
 
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %    CAPITULO
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
+% !Rnw root = BP_Curso_TecComp_00_2019.Rnw
+
+
 \chapter{Aula 8 - Encerramento do Curso}
 
 
-
+Aqui colocamos as coisas que precisa lembrar e algumas ideias sobre o que pode fazer
 
 \chapter{Onde aprender mais?}
 \addcontentsline{toc}{section}{Onde aprender mais?}
