--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c01_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_c01_2019.Rnw
@@ -71,7 +71,25 @@ Você pode conseguir mais informações sobre o R e os detalhes da instalação 
 
 \subsection{Instalando o RStudio}
 
-O RStudio um ambiente de desenvolvimento integrado para o R. Incorpora um conjunto de funções que facilita o desenvolvimento de programas em R e a sua execução. O RStudio não é uma interface gráfica para a execução de rotinas do R, é um ambiente que permite implementar e executar programas. É um pacote comercial com partes de uso livre onde é necessário pagar pelos recursos extras.
+O RStudio é um ambiente de desenvolvimento integrado para o R. Incorpora um conjunto de funções que facilita o desenvolvimento de programas em R e a sua execução. O RStudio não é uma interface gráfica para a execução de rotinas do R, é um ambiente que permite implementar e executar programas. É um pacote comercial com partes de uso livre onde é necessário pagar pelos recursos extras.
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f01-05}
+	\caption{Página inicial do Rstudio}
+	\label{fig:f01-05}
+\end{figure}
+
+A figura \ref{fig:f01-05} apresenta a página inicial do site do \textbf{Rstudio}. Para ter acesso ao download é preciso clicar na opção \textbf{Rstudio Desktop}.
+
+\begin{figure}[htpb]
+	\centering
+	\includegraphics[width=\linewidth]{../figs/BP_Curso_TecComp_00_2019_f01-06}
+	\caption{Aba de download do Rstudio}
+	\label{fig:f01-06}
+\end{figure}
+
+\textbf{CONTINUAR DAQUI}
 
 
 \url{https://www.rstudio.com/products/rstudio/}
